<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="#edf1fe"
    android:orientation="vertical"
    tools:context=".SubscriptionsActivity">

    <TextView
        android:id="@+id/txt_classsubs"
        android:layout_width="100dp"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/classholder"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:textColor="#fff"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_classvaluesubs"
        android:layout_width="280dp"
        android:layout_height="80dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="start"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:maxLines="5"
        android:minLines="2"
        android:singleLine="false"
        android:text="@string/coursedescriptionplaceholder"
        android:textColor="#fff"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_classsubs"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/subscribebtn"
        android:layout_width="388dp"
        android:layout_height="40dp"
        android:layout_marginTop="4dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/subscribe"
        android:textColor="#fff"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_classvaluesubs" />


</androidx.constraintlayout.widget.ConstraintLayout>