<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#edf1fe"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/profileusername"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="monospace"
        android:gravity="center"
        android:textColor="#fff"
        android:text="@string/baselineprofilename"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/year"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/csusmlogo" />

    <DatePicker
        android:id="@+id/profiledatePicker"
        android:layout_width="350dp"
        android:layout_height="99dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:minDate="01/01/1950"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <ImageView
        android:id="@+id/csusmlogo"
        android:layout_width="415dp"
        android:layout_height="145dp"
        android:contentDescription="@string/csusmlogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileusername"
        app:srcCompat="@drawable/csusmlogo" />

    <TextView
        android:id="@+id/bdaylabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/birthday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year" />

    <TextView
        android:id="@+id/subscriptionlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/subscriptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profiledatePicker" />

    <Spinner
        android:id="@+id/subscriptionspinner"
        android:layout_width="280dp"
        android:layout_height="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.229"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscriptionlabel" />

    <Button
        android:id="@+id/subscriptiondeletebtn"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="28dp"
        android:padding="20dp"
        android:background="@color/colorPrimary"
        android:drawableStart="@android:drawable/ic_menu_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/subscriptionspinner"
        app:layout_constraintTop_toBottomOf="@+id/profiledatePicker" />

    <Button
        android:id="@+id/updateprofilebtn"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/updateprofile"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscriptionspinner" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>